--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -23,6 +23,8 @@ jobs:
 
       - run: pip install git+https://github.com/royaurelien/pyhub.git@main
 
+      - run: ls -al
+
       - name: Fetch tags
         shell: bash
         env:
@@ -34,6 +36,8 @@ jobs:
           result=$(pyhub-cli repo tags $NAME \
           -f name -f full_size -f tag_last_pulled -f tag_last_pushed \
           -o json)
+
+          echo "$result"
           echo "$result" > ./tags.json
 
       - name: Commit & Push changes
